# etf-strategy-framework

./: .gitignore  BOT_README.md  README.md  bot_config.yaml  etf_backtest.py  etf_bot.py  etf_regression.py  etf_sda_backtest.py  pyproject.toml
diagnostics/: cash_flow_analyzer.py
docs/: adaptive_dca_strategy.md
etf/: __init__.py  config.py  models.py  sda_bot.py
etf/analytics/: metrics.py  reports.py
etf/backtest/: comparison.py  engine.py  sweep.py
etf/cli/: main.py
etf/data/: __init__.py  indicators.py  loader.py
etf/portfolio/: cashflow.py  portfolio.py
etf/strategies/: __init__.py  adaptive_dca.py  base.py  bot.py  dca.py  sda.py  value_averaging.py
etf/tests/: test_adaptive_dca_strategy.py  test_backtest_metrics.py  test_sweep.py
tests/: test_cash_management.py
